apps/paperless-ngx/install/paperless-ngx-headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: paperless-ngx-headers
  namespace: traefik
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    referrerPolicy: no-referrer
    contentSecurityPolicy: "default-src 'none'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https:; style-src 'self' 'unsafe-inline' https:; img-src 'self' data: https:; font-src 'self' https: data:; connect-src 'self' https:; frame-src 'self' https:; media-src 'self' https:; object-src 'none'; frame-ancestors 'self'; base-uri 'self'; form-action 'self' https:;"
    customRequestHeaders:
      X-Forwarded-Proto: https
      X-Forwarded-Host: paperless.local.asztalos.net
      Host: paperless.local.asztalos.net
      Origin: https://paperless.local.asztalos.net
    customResponseHeaders:
      X-Forwarded-Proto: https
