apps/paperless-ngx/install/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx
  namespace: paperless-ngx
  labels:
    app: paperless-ngx
    app.kubernetes.io/name: paperless-ngx
    app.kubernetes.io/part-of: paperless-ngx
    app.kubernetes.io/instance: paperless-ngx
    app.kubernetes.io/component: paperless-ngx
spec:
  type: ClusterIP
  selector:
    app: paperless-ngx
  ipFamilyPolicy: RequireDualStack
  ipFamilies:
    - IPv6
    - IPv4
  ports:
    - name: webui
      port: 8000
      targetPort: 8000
