apps/paperless-ngx/install/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-ngx
  namespace: paperless-ngx
  labels:
    app: paperless-ngx
    app.kubernetes.io/name: paperless-ngx
    app.kubernetes.io/part-of: paperless-ngx
    app.kubernetes.io/instance: paperless-ngx
    app.kubernetes.io/component: paperless-ngx
spec:
  ingressClassName: traefik-external
  entryPoints:
    - websecure
  routes:
    - match: Host(`paperless.local.asztalos.net`)
      kind: Rule
      middlewares:
        - name: paperless-ngx-headers
          namespace: traefik
      services:
        - name: paperless-ngx
          namespace: paperless-ngx
          port: 8000
  tls:
    secretName: local-asztalos-net-tls
